syntax = "proto3";

message PrayerStartRequest {
  string user_id = 1;
}

message PrayerEndRequest {
  string user_id = 1;
}

message PrayerResponse {
  string message = 1;
}

service PrayerTrackerService {
  rpc StartPrayer(PrayerStartRequest) returns (PrayerResponse);
  rpc EndPrayer(PrayerEndRequest) returns (PrayerResponse);
}
